Salvare ApplicationUser si Bookmarks

--- a/MyCloset/Views/Items/Index.cshtml
+++ b/MyCloset/Views/Items/Index.cshtml
@@ -18,7 +18,7 @@
 {
     <div class="card">
 
-        <partial name="ItemInfo" model="item"></partial>
+        <partial name="ItemsInfo" model="item"></partial>
 
         <a class="btn btn-success" asp-controller="Items" asp-action="Show" asp-route-id="@item.Id">Afisare item</a>
 
