--- a/MyCloset/Views/Items/Show.cshtml
+++ b/MyCloset/Views/Items/Show.cshtml
@@ -8,7 +8,7 @@
 
 <div class="card">
 
-    <partial name="ItemInfo" model="Model"></partial>
+    <partial name="ItemsInfo" model="Model"></partial>
 
     <div class="d-flex flex-row justify-content-between">
 
