--- a/MyCloset/Views/Categories/Edit.cshtml
+++ b/MyCloset/Views/Categories/Edit.cshtml
@@ -10,6 +10,8 @@
 
 <form asp-action="Edit" asp-controller="Categories" asp-route-id="@Model.Id" method="post">
 
+    <div asp-validation-summary="All" class="text-danger"></div>
+
     <div class="form-group">
         <label asp-for="CategoryName" class="form-label">Denumire categorie</label>
         <br />
