--- a/MyCloset/Views/Items/New.cshtml
+++ b/MyCloset/Views/Items/New.cshtml
@@ -11,6 +11,8 @@
 
             <form method="post" enctype="multipart/form-data" asp-controller="Items" asp-action="New">
 
+                <div asp-validation-summary="All" class="text-danger"></div>
+
                 <div class="form-group">
                     <label asp-for="Name" class="form-label">Nume Item</label>
                     <br />
