--- a/MyCloset/Views/Shared/ItemsInfo.cshtml
+++ b/MyCloset/Views/Shared/ItemsInfo.cshtml
@@ -13,8 +13,8 @@
     }
     else
     {
-        <img src="@Model.Image" alt="Article Image" style="width:
-        100%; height: 450px; object-fit: cover" />
+        <img src="@Model.Image" alt="Item Image" style="width:
+        50%; height: 100%; object-fit: cover" />
     }
 
     <div class="card-text">@Model.Caption</div>
