--- a/MyCloset/Views/Items/Show.cshtml
+++ b/MyCloset/Views/Items/Show.cshtml
@@ -15,8 +15,8 @@
 
     <partial name="ItemsInfo" model="Model"></partial>
 
-     @if ((ViewBag.AfisareButoane == true && Model.UserId == ViewBag.UserCurent)
-        || ViewBag.EsteAdmin == true)
+      @*if ((ViewBag.AfisareButoane == true && Model.UserId == ViewBag.UserCurent) || ViewBag.EsteAdmin == true)*@
+    @if (Model.UserId == ViewBag.UserCurent || ViewBag.EsteAdmin == true)
     {
         <div class="d-flex flex-row justify-content-between">
 
