--- a/MyCloset/Views/Shared/ItemsInfo.cshtml
+++ b/MyCloset/Views/Shared/ItemsInfo.cshtml
@@ -23,6 +23,12 @@
 
         <div><i class="bi bi-globe"></i> @Model.Category.CategoryName</div>
 
+        @* de adaugat username-ul userului care a adaugat item-ul
+
+        <div><i class="bi bi-person"></i> @Model.User.UserName</div>
+
+        *@
+
         <span class="alert-success">@Model.Date</span>
 
     </div>
