--- a/MyCloset/Views/Home/Index.cshtml
+++ b/MyCloset/Views/Home/Index.cshtml
@@ -1,8 +1,43 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="row">
+    <div class="col-12">
+        <div class="bg-light rounded-3 p-5 mb-4">
+            <div class="row">
+                <div class="col-md-8">
+                    <h1 class="font-roboto display-5 fw-bold">@Html.Raw(ViewBag.FirstItem.Name)</h1>
+                    <div class="font-montserrat mb-3 truncate">@Html.Raw(ViewBag.FirstItem.Caption)</div>
+                    <a href="/Items/Show/@ViewBag.FirstItem.Id" class="btn btn-outline-success">Vezi articolul</a>
+                </div>
+                <div class="col-md-4">
+                    <img src="@ViewBag.FirstItem.Image" class="img-fluid align-items-center justify-content-center" />
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+<div class="row mb-4">
+    @foreach (var item in ViewBag.Items)
+    {
+        <div class="col-6 row-style">
+            <div class="card">
+                <div class="card-title p-3 text-center bg-dark text-white">
+                    <h4>@Html.Raw(item.Name)</h4>
+                </div>
+
+                <div class="card-body">
+                    <img src="@Html.Raw(item.Image)" class="img-fluid align-items-center justify-content-center" />
+                    <div class="font-montserrat truncate">@Html.Raw(item.Caption)</div>
+                </div>
+                <div class="card-footer">
+                    <a class="btn btn-outline-success" href="/Items/Show/@item.Id">Vezi Articolul</a>
+                </div>
+            </div>
+        </div>
+    }
 </div>
