--- a/MyCloset/Views/Shared/_Layout.cshtml
+++ b/MyCloset/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Bookmarks" asp-action="Index">Colectii</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Profile">Vizualizare profil</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Show">Vizualizare profil</a>
                             </li>
                         }
 
@@ -55,7 +55,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Bookmarks" asp-action="Index">Colectii</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Profile">Vizualizare profil</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Show">Vizualizare profil</a>
                             </li>
                         }
 
