--- a/MyCloset/Views/Users/Edit.cshtml
+++ b/MyCloset/Views/Users/Edit.cshtml
@@ -50,7 +50,11 @@
     <br />
 
 
-    <select name="newRole" class="form-control">
+    @{
+        var isAdmin = User.IsInRole("Admin");
+    }
+
+    <select name="newRole" class="form-control" @(isAdmin ? "" : "disabled")>
         <option selected>Selectati rolul</option>
 
         @foreach (var role in ViewBag.AllRoles)
