super pagina de profil

--- a/MyCloset/Views/Bookmarks/Index.cshtml
+++ b/MyCloset/Views/Bookmarks/Index.cshtml
@@ -35,6 +35,8 @@
 
                     <a asp-controller="Bookmarks" asp-action="Show" asp-route-id="@bookmark.Id" class="btn alert-success">Afisare Colectie</a>
 
+                    <a asp-controller="Bookmarks" asp-action="Edit" asp-route-id="@bookmark.Id" class="btn alert-success">Editare Colectie</a>
+
                 </div>
             </div>
         </div>
