--- a/MyCloset/Views/Items/Index.cshtml
+++ b/MyCloset/Views/Items/Index.cshtml
@@ -28,15 +28,19 @@
 
 
 
-@foreach (var item in ViewBag.Items)
-{
-    <div class="card">
-
-        <partial name="ItemsInfo" model="item"></partial>
-        <a class="btn btn-success" asp-controller="Items" asp-action="Show" asp-route-id="@item.Id">Afisare item</a>
-
+<div class="container">
+    <div class="row">
+        @foreach (var item in ViewBag.Items)
+        {
+            <div class="col-md-6 col-lg-4 mb-4">
+                <div class="card h-100">
+                    <partial name="ItemsInfo" model="item"></partial>
+                    <a class="btn btn-success" asp-controller="Items" asp-action="Show" asp-route-id="@item.Id">Afisare item</a>
+                </div>
+            </div>
+        }
     </div>
-    <br />
-    <br />
-}
+</div>
+
+
 
