--- a/MyCloset/Views/Users/Show.cshtml
+++ b/MyCloset/Views/Users/Show.cshtml
@@ -46,8 +46,22 @@
                     <a class="btn btn-primary" asp-controller="Users" asp-action="Edit" asp-route-id="@Model.Id">Edit Profile</a>
                 </div>
             }
+
+            <br/>
+            <br/>
+
+            @if ((string)Model.Id == ViewBag.UserCurent.Id)
+            {
+                <div class="d-flex flex-row justify-content-between p-3">
+                    <form asp-controller="Users" asp-action="Delete" method="post" asp-route-id="@Model.Id">
+                        <button type="submit" class="btn btn-danger">Sterge utilizator</button>
+                    </form>
+                </div>
+            }
             
         </div>
+
+        
         
         @*
          @if (ViewBag.Items != null && ViewBag.Items.Count > 0)
@@ -87,21 +101,63 @@
                      <br />
                  }
              }
-         } 
-        *@
-       
+         }
 
-        @if ((string)Model.Id != ViewBag.UserCurent.Id)
-        {
-            <div class="d-flex flex-row justify-content-between p-3">
-                <form asp-controller="Users" asp-action="Delete" method="post" asp-route-id="@Model.Id">
-                    <button type="submit" class="btn btn-danger">Sterge utilizator</button>
-                </form>
-            </div>
-        }
+         *@
+
+        <div class="row">
+
+            <br />
+            <br />
+            <br />
+
+            @foreach (var bookmark in ViewBag.Bookmarks)
+            {
+                <div class="col-4 mb-4">
+
+                    <div class="card">
+
+                        <div class="card-body">
+
+                            <h5 class="card-title" name="Name">@bookmark.Name</h5>
+
+                            <br />
+
+                            <a asp-controller="Bookmarks" asp-action="Show" asp-route-id="@bookmark.Id" class="btn alert-success">Afisare Colectie</a>
+
+                        </div>
+                    </div>
+                </div>
+            }
+
+        </div>
+ 
 
     </div>
+
+    
+    <br/>   
+        
 </div>
+
+<br />
+<br />
+
+
+<div class="container">
+    <div class="row">
+        @foreach (var item in ViewBag.Items)
+        {
+            <div class="col-md-6 col-lg-4 mb-4">
+                <div class="card h-100">
+                    <partial name="ItemsInfo" model="item"></partial>
+                    <a class="btn btn-success" asp-controller="Items" asp-action="Show" asp-route-id="@item.Id">Afisare item</a>
+                </div>
+            </div>
+        }
+    </div>
+</div>
+
 
 
 
