--- a/MyCloset/Views/Users/Show.cshtml
+++ b/MyCloset/Views/Users/Show.cshtml
@@ -33,7 +33,7 @@
 
             @if (ViewBag.Roles.Count > 0)
             {
-                <p><i class="bi bi-person"> </i> Roluri utilizator:</p>
+                <p><i class="bi bi-person"> </i> Rol:</p>
                 @foreach (var role in ViewBag.Roles)
                 {
                     <span class="rounded-pill bg-dark mr-2 px-4 py-2 text-white">@role</span>
@@ -58,7 +58,10 @@
                     </form>
                 </div>
             }
-            
+            <br />
+            <br />
+
+            <p>Colectii publice:</p>
         </div>
 
         
